Add node_modules to .gitignore and update files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <!-- Include the latest EmailJS SDK -->
+    <script
+      type="text/javascript"
+      src="https://cdn.emailjs.com/dist/email.min.js"
+    ></script>
   </head>
   <body>
     <div class="container">
@@ -335,6 +340,9 @@
     <script src="./app.js"></script>
     <script src="contact.js"></script>
 
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.emailjs.com/dist/email.min.js"
+    ></script>
   </body>
 </html>
