Your commit message here

--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./style.css" />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Include the latest EmailJS SDK -->
-    <script
-      type="text/javascript"
-      src="https://cdn.emailjs.com/dist/email.min.js"
-    ></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   </head>
   <body>
     <div class="container">
       <video
+        preload="none"
+        loading="lazy"
         class="back-vid"
         loop
         autoplay
@@ -45,9 +41,7 @@
           <a href="https://github.com/ajay70jadhav" target="_blank"
             ><i class="bx bxl-github"></i
           ></a>
-          <a
-            href="https://www.linkedin.com/in/ajay-jadhav-6652a3228/"
-            target="_blank"
+          <a href="https://www.linkedin.com/in/ajay-jadhav-6652a3228/" target="_blank"
             ><i class="bx bxl-linkedin-square"></i
           ></a>
         </div>
@@ -68,13 +62,7 @@
         </div>
       </div>
       <div class="blackhole-box">
-        <video
-          loop
-          autoplay
-          muted
-          plays-inline
-          src="./videos/blackhole.mp4"
-        ></video>
+        <video loop autoplay muted plays-inline src="./videos/blackhole.mp4"></video>
       </div>
       <!--===============section-1 =================-->
       <section class="hero">
@@ -88,8 +76,8 @@
             <span class="gradient">Experience</span>
           </h1>
           <p>
-            I am a front-end developer with experience in website and software
-            development. Explore my skills below.
+            I am a front-end developer with experience in website and software development. Explore
+            my skills below.
           </p>
 
           <a
@@ -97,9 +85,7 @@
             href="./docs/Frontend Developer Resume.pdf"
             download="Ajay Jadhva Resume"
           >
-            <button class="resume-button">
-              <i class="bx bx-send"></i>Resume
-            </button>
+            <button class="resume-button"><i class="bx bx-send"></i>Resume</button>
           </a>
         </div>
 
@@ -112,25 +98,24 @@
           <div class="card">
             <h1>Hi there, i'm Ajay</h1>
             <p>
-              Hi, I'm Ajay Gulab Jadhav, a B.Tech Computer Science graduate. I'm
-              actively preparing for interviews and building projects to enhance
-              my skills.
+              Hi, I'm Ajay Gulab Jadhav, a B.Tech Computer Science graduate. I'm actively preparing
+              for interviews and building projects to enhance my skills.
             </p>
             <img src="./images/grid1.png" alt="card-image" />
           </div>
           <div class="card">
             <h1>Tech Stack</h1>
             <p>
-              I specialize in front-end and full-stack development with
-              expertise in HTML, CSS, JavaScript, and ReactJS.
+              I specialize in front-end and full-stack development with expertise in HTML, CSS,
+              JavaScript, and ReactJS.
             </p>
             <img src="./images/grid2.png" alt="card-image" />
           </div>
           <div class="card">
             <h1>flexible with time zone communications and location</h1>
             <p>
-              I am highly flexible with time zone communications and open to
-              working from any location.
+              I am highly flexible with time zone communications and open to working from any
+              location.
             </p>
             <video
               autoplay
@@ -142,17 +127,15 @@
             ></video>
 
             <a style="text-decoration: none" href="#contact">
-              <button class="resume-button">
-                <i class="bx bx-link-external"></i>Contact Me
-              </button>
+              <button class="resume-button"><i class="bx bx-link-external"></i>Contact Me</button>
             </a>
           </div>
           <div class="card">
             <h1>My Passion For Coding</h1>
             <p>
-              I have a strong passion for coding and love solving problems
-              through development. I enjoy building projects, learning new
-              technologies, and continuously improving my skills.
+              I have a strong passion for coding and love solving problems through development. I
+              enjoy building projects, learning new technologies, and continuously improving my
+              skills.
             </p>
             <img src="./images/grid4.png" alt="card-image" />
           </div>
@@ -165,23 +148,15 @@
         <h1 class="section-title autoDisplay">My Projects</h1>
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video
-              muted
-              id="projectVideo-1"
-              src="./videos/whatsapp clone - Trim.mp4"
-            ></video>
+            <video muted id="projectVideo-1" src="./videos/whatsapp clone - Trim.mp4"></video>
             <div class="hover-sign"></div>
           </div>
           <div class="project-info fadeInRight">
-            <h1>
-              <span class="gradient">WhatsApp</span> <span>Clone</span> (Ongoing
-              Project)
-            </h1>
+            <h1><span class="gradient">WhatsApp</span> <span>Clone</span> (Ongoing Project)</h1>
             <p>
-              A real-time chat application built with the MERN stack and
-              Socket.IO, enabling instant messaging, user authentication, and
-              media sharing. The app supports one-on-one and group chats,
-              message status updates, and a responsive UI for a seamless user
+              A real-time chat application built with the MERN stack and Socket.IO, enabling instant
+              messaging, user authentication, and media sharing. The app supports one-on-one and
+              group chats, message status updates, and a responsive UI for a seamless user
               experience.
             </p>
             <button><i class="bx bx-link-external"></i>Website</button>
@@ -195,35 +170,26 @@
           <div class="project-info fadeInRight">
             <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
             <p>
-              A personal portfolio website designed to showcase my skills,
-              projects, and experience as a front-end developer. Built using
-              HTML, CSS, and JavaScript, it features a clean UI, smooth
-              animations, and a fully responsive design for an optimal user
-              experience. The website includes sections for my skills, projects,
-              and a contact form, along with a downloadable resume option.
+              A personal portfolio website designed to showcase my skills, projects, and experience
+              as a front-end developer. Built using HTML, CSS, and JavaScript, it features a clean
+              UI, smooth animations, and a fully responsive design for an optimal user experience.
+              The website includes sections for my skills, projects, and a contact form, along with
+              a downloadable resume option.
             </p>
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
         </div>
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video
-              muted
-              id="projectVideo-3"
-              src="./videos/Socialmedia - Trim.mp4"
-            ></video>
+            <video muted id="projectVideo-3" src="./videos/Socialmedia - Trim.mp4"></video>
           </div>
           <div class="project-info fadeInRight">
-            <h1>
-              Social <span class="gradient">Media Platform</span> (Ongoing
-              Project)
-            </h1>
+            <h1>Social <span class="gradient">Media Platform</span> (Ongoing Project)</h1>
             <p>
-              A dynamic social media app built with the MERN stack, featuring
-              user authentication, post creation, image uploads, likes, and
-              comments. The frontend uses React.js, Redux Toolkit, React Router,
-              Formik, and Material UI, while the backend is powered by Node.js,
-              Express.js, MongoDB, JWT, and Multer.
+              A dynamic social media app built with the MERN stack, featuring user authentication,
+              post creation, image uploads, likes, and comments. The frontend uses React.js, Redux
+              Toolkit, React Router, Formik, and Material UI, while the backend is powered by
+              Node.js, Express.js, MongoDB, JWT, and Multer.
             </p>
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
@@ -237,15 +203,15 @@
           <div class="designer autoDisplay">
             <h1 class="gradient">Designer<i class="bx bx-laptop"></i></h1>
             <p>
-              As a coder, I specialize in JavaScript, ReactJS, and the MERN
-              stack, building efficient and scalable web applications
+              As a coder, I specialize in JavaScript, ReactJS, and the MERN stack, building
+              efficient and scalable web applications
             </p>
           </div>
           <div class="coder autoDisplay">
             <h1 class="gradient">Coder <i class="bx bx-code-block"></i></h1>
             <p>
-              As a designer, I create visually appealing and responsive UI/UX
-              using HTML, CSS, and Tailwind CSS.
+              As a designer, I create visually appealing and responsive UI/UX using HTML, CSS, and
+              Tailwind CSS.
             </p>
           </div>
           <!-- 
@@ -317,19 +283,15 @@
 
         <div class="contact-box autoBlur">
           <p>
-            Have a project idea, a collaboration proposal, or just want to chat?
-            Feel free to reach out!
+            Have a project idea, a collaboration proposal, or just want to chat? Feel free to reach
+            out!
           </p>
           <p>Full Name</p>
           <input type="text" placeholder="Your Full Name" />
           <p>Email Address</p>
           <input type="text" placeholder="Your Email" />
           <p>Your Message</p>
-          <input
-            class="input-message"
-            type="text"
-            placeholder="Share Your Thoughts.... "
-          />
+          <input class="input-message" type="text" placeholder="Share Your Thoughts.... " />
           <button><i class="bx bx-send"></i>Send Message</button>
         </div>
       </section>
@@ -340,9 +302,6 @@
     <script src="./app.js"></script>
     <script src="contact.js"></script>
 
-    <script
-      type="text/javascript"
-      src="https://cdn.emailjs.com/dist/email.min.js"
-    ></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   </body>
 </html>
