update portfolio files

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
           <a
             style="text-decoration: none"
-            href="./docs/Frontend Developer Resume.pdf"
-            download="Ajay Jadhva Resume"
+            href="https://drive.google.com/file/d/1TH2Nl-sWnVfXl6jpfwg5SCtRPJU9apdm/view?usp=sharing"
+            target="_blank"
           >
             <button class="resume-button"><i class="bx bx-send"></i>Resume</button>
           </a>
@@ -152,14 +152,14 @@
             <div class="hover-sign"></div>
           </div>
           <div class="project-info fadeInRight">
-            <h1><span class="gradient">Chatterly</span> (Ongoing Project)</h1>
-            <p>
-              🔑 Google OAuth 2.0 Authentication – Easy and secure login.<br />
-              ⚡ Real-Time Messaging – Instant communication using Socket.IO.<br />
-              🟢 User Presence – See who's online or offline in real-time.<br />
-              📱 Responsive Design – Optimized for mobile and desktop.<br />
-              🚀 Deployed & Scalable – Frontend on Netlify, Backend & Socket server on Render.
-            </p>
+            <h1><span class="gradient">Chatterly</span></h1>
+            <ul>
+              <li>Google OAuth 2.0 Authentication – Easy and secure login.</li>
+              <li>Real-Time Messaging – Instant communication using Socket.IO.</li>
+              <li>User Presence – See who's online or offline in real-time.</li>
+              <li>Responsive Design – Optimized for mobile and desktop.</li>
+              <li>Deployed & Scalable – Frontend on Netlify, Backend & Socket server on Render.</li>
+            </ul>
             <a href="https://chatterllly.netlify.app/" target="_blank" style="text-decoration: none"
               ><button><i class="bx bx-link-external"></i>Website</button></a
             >
@@ -168,39 +168,50 @@
 
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video id="projectVideo-2" src="./videos/project2.mp4"></video>
+            <video muted id="projectVideo-2" src="./videos/project2.mp4"></video>
+            <div class="hover-sign"></div>
           </div>
           <div class="project-info fadeInRight">
             <h1>Modern <span class="gradient">Portfolio</span> Website</h1>
-            <p>
-              A personal portfolio website designed to showcase my skills, projects, and experience
-              as a front-end developer. Built using HTML, CSS, and JavaScript, it features a clean
-              UI, smooth animations, and a fully responsive design for an optimal user experience.
-              The website includes sections for my skills, projects, and a contact form, along with
-              a downloadable resume option.
-            </p>
+            <ul>
+              <li>
+                A personal portfolio website designed to showcase my skills, projects, and
+                experience as a front-end developer.
+              </li>
+              <li>
+                Built using HTML, CSS, and JavaScript, it features a clean UI, smooth animations,
+                and a fully responsive design for an optimal user experience.
+              </li>
+              <li>
+                The website includes sections for my skills, projects, and a contact form, along
+                with a downloadable resume option.
+              </li>
+            </ul>
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
         </div>
 
         <div class="project-card">
           <div class="project-vidbox autoBlur">
-            <video muted id="projectVideo-3" src="./videos/Socialmedia - Trim.mp4"></video>
+            <img id="projectVideo-3" src="./images/ai_agent.jpg" alt="AI Voice Interview Agent" />
+            <div class="hover-sign"></div>
           </div>
           <div class="project-info fadeInRight">
-            <h1>
-              Full-Stack Real-Time <span class="gradient">AI Voice Interview Agent</span> (Next.js,
-              Tailwind CSS, Vapi, Firebase)
-            </h1>
-            <p>
-              09/25 – present<br />
-               Designed and developed a real-time AI voice interview platform enabling interactive
-              mock interviews.<br />
-               Built the frontend with Next.js and Tailwind CSS, ensuring a sleek and responsive
-              user experience.<br />
-               Integrated Vapi for AI-powered voice interaction and used Firebase for secure
-              authentication and real-time session management.
-            </p>
+            <h1><span class="gradient">AI Voice Interview Agent</span>(On going)</h1>
+            <ul>
+              <li>
+                Designed and developed a real-time AI voice interview platform enabling interactive
+                mock interviews.
+              </li>
+              <li>
+                Built the frontend with Next.js and Tailwind CSS, ensuring a sleek and responsive
+                user experience.
+              </li>
+              <li>
+                Integrated Vapi for AI-powered voice interaction and used Firebase for secure
+                authentication and real-time session management.
+              </li>
+            </ul>
             <button><i class="bx bx-link-external"></i>Website</button>
           </div>
         </div>
