update portfolio files

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./style.css" />
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
     <!-- Include the latest EmailJS SDK -->
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -107,7 +106,7 @@
             <h1>Tech Stack</h1>
             <p>
               I specialize in front-end and full-stack development with expertise in HTML, CSS,
-              JavaScript, and ReactJS.
+              JavaScript, ReactJS, Node.js, and MongoDB.
             </p>
             <img src="./images/grid2.png" alt="card-image" />
           </div>
@@ -316,13 +315,18 @@
           <button type="submit"><i class="bx bx-send"></i> Send Message</button>
         </form>
       </section>
+
+      <!-- Load EmailJS SDK -->
+      <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
+      <!-- Load your JS file -->
+      <script src="script.js"></script>
+
       <footer>
         <h1>Copyright © 2024 Ajay Jadhav. All rights reserved.</h1>
       </footer>
     </div>
     <script src="./app.js"></script>
     <script src="contact.js"></script>
-
-    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
   </body>
 </html>
