--- a/index.html
+++ b/index.html
@@ -328,5 +328,17 @@
     </div>
     <script src="./app.js"></script>
     <script src="contact.js"></script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-813WTP801P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-813WTP801P");
+    </script>
   </body>
 </html>
