--- a/index.html
+++ b/index.html
@@ -186,7 +186,12 @@
                 with a downloadable resume option.
               </li>
             </ul>
-            <button><i class="bx bx-link-external"></i>Website</button>
+            <a
+              href="https://portfolio-ajay-jadhav.netlify.app/"
+              target="_blank"
+              style="text-decoration: none"
+              ><button><i class="bx bx-link-external"></i>Website</button></a
+            >
           </div>
         </div>
 
